--- a/app/src/main/res/layout/activity_login_guru.xml
+++ b/app/src/main/res/layout/activity_login_guru.xml
@@ -25,7 +25,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="50dp"
-        android:hint="@string/nis"
+        android:hint="@string/email"
         app:boxBackgroundColor="@color/white"
         app:boxCornerRadiusBottomEnd="8dp"
         app:boxCornerRadiusBottomStart="8dp"
@@ -39,7 +39,7 @@
         app:suffixTextColor="@color/white">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/inputNis"
+            android:id="@+id/inputEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -92,6 +92,7 @@
         android:layout_marginStart="2dp"
         android:layout_marginTop="44dp"
         android:text="@string/masuk"
+        android:onClick="masukKeMurid"
         android:textColor="#032DFF"
         android:textSize="15sp"
         app:layout_constraintStart_toEndOf="@+id/textView"
