--- a/app/src/main/res/layout/activity_login_murid.xml
+++ b/app/src/main/res/layout/activity_login_murid.xml
@@ -93,6 +93,7 @@
         android:layout_marginStart="2dp"
         android:layout_marginTop="44dp"
         android:text="@string/masuk"
+        android:onClick="masukKeGuru"
         android:textColor="#032DFF"
         android:textSize="15sp"
         app:layout_constraintStart_toEndOf="@+id/textView"
