--- a/app/src/main/res/layout/activity_login_guru.xml
+++ b/app/src/main/res/layout/activity_login_guru.xml
@@ -87,14 +87,16 @@
         app:layout_constraintTop_toBottomOf="@+id/til_password" />
 
     <TextView
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
         android:layout_marginTop="44dp"
-        android:text="@string/masuk"
         android:onClick="masukKeMurid"
+        android:text="@string/masuk"
         android:textColor="#032DFF"
         android:textSize="15sp"
+        app:layout_constraintEnd_toStartOf="@+id/btnMasuk"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/til_password" />
 
@@ -103,10 +105,9 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_marginTop="28dp"
+        android:layout_marginEnd="48dp"
         android:text="@string/masuk"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.842"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/til_password" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
