--- a/app/src/main/res/layout/activity_login_guru.xml
+++ b/app/src/main/res/layout/activity_login_guru.xml
@@ -79,10 +79,13 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="44dp"
+        android:layout_marginEnd="10dp"
         android:text="@string/masuk_sebagai_murid"
         android:textSize="15sp"
+        app:layout_constraintEnd_toStartOf="@+id/textView5"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/til_password" />
 
@@ -90,14 +93,13 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
         android:layout_marginTop="44dp"
+        android:layout_marginEnd="20dp"
         android:onClick="masukKeMurid"
         android:text="@string/masuk"
         android:textColor="#032DFF"
         android:textSize="15sp"
         app:layout_constraintEnd_toStartOf="@+id/btnMasuk"
-        app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/til_password" />
 
     <com.google.android.material.button.MaterialButton
@@ -105,7 +107,7 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_marginTop="28dp"
-        android:layout_marginEnd="48dp"
+        android:layout_marginEnd="40dp"
         android:text="@string/masuk"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/til_password" />
